--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
     <title>Feedback de Cancelamento</title>
 </head>
 <body>    
     <h1>Olá, Elhder Lopes, tudo bem?</h1>
-    <h4>Eu vi aqui que infelizmente você cancelou a sua assinatura conosco.</h4>
+    <h3>Eu vi aqui que infelizmente você cancelou a sua assinatura conosco.</h3>
     <h4>Eu queria saber um pouco de como foi a sua experiência com a gente, e, para melhorarmos ainda mais nossos serviços, queremos  saber  qual foi o motivo que te levou a cancelar a sua assinatura.</h4>
     <div class="botao1">
     <input style="background-color: red; color: aliceblue;  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -21,7 +22,7 @@
     </div>
     <div class="botao3">
     <input style="background-color: red; color: aliceblue;  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;margin-bottom: 12px;width: 30%;" type="button" value="Velocidade da internte não me atende" onclick="enviar3()">
+    transition: 0.3s;margin-bottom: 12px;width: 30%;" type="button" value="Velocidade da internet não me atende" onclick="enviar3()">
     </div>
     <div class="botao4">
     <input style="background-color: red; color: aliceblue;  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
